welcome.lessons.welcome.traversal.column.TraversalByColumn.scala.error
ColumnByColumn:3: error: type mismatch;
 found   : (Int, Int)
 required: Double
		var pos:Double=(0,0)
                               ^ColumnByColumn:4: error: type mismatch;
 found   : Unit
 required: Boolean
	}
        ^